--- a/Changes
+++ b/Changes
@@ -1,3 +1,15 @@
+Sun Apr 20 20:51:52 2008  fox
+
+       3* Now builds under ubuntu 2.6.22-14-generic kernel and
+          RedHat FC* 2.6.24.4-64.fc8. More portability.
+
+	  If you load the driver, you will have 
+
+	  /proc/dtrace/helper
+	  /proc/dtrace/dtrace
+
+	  entries. (Non functional since no plumbing at present).
+
 Sat Apr 19 23:08:09 2008  fox
 
        2* drivers/dtracedrv.ko finally links correctly. However theres still
