--- a/Changes
+++ b/Changes
@@ -1,3 +1,11 @@
+Mon May  5 09:48:18 2008  fox
+
+      14* /dev/ctf driver now loads but theres lots of inter-driver
+          dependencies which are a pain to manage, so may try
+	  and create a consolidated driver.
+
+      13* Archive: 1.0010
+
 Mon Apr 28 20:36:54 2008  fox
 
       12* Archive: 1.0008
