--- a/Changes
+++ b/Changes
@@ -1,3 +1,10 @@
+Sun May 25 00:35:12 2008  fox
+
+      20* drivers/dtrace.c: Update to latest opensolaris code to help
+          find bugs in driver.
+
+      19* Archive: 1.0018
+
 Tue May 20 23:50:24 2008  fox
 
       18* cmd/dtrace/dtrace.c: Incorporate getopt() fixes from Apple/Darwin.
