--- a/Changes
+++ b/Changes
@@ -1,3 +1,12 @@
+Mon May 26 14:31:54 2008  fox
+
+      21* drivers/dtrace/*: Fix issue where 'dtrace -l' would keep
+          adding the same probes. Needed to mimic the init/attach/open
+	  cycle of a proper solaris driver. Fixed various crashes due
+	  to this, and allows driver to unload properly - no issues in simple
+	  testing, but basic probe placement is not working yet - cannot 
+	  plant the probes. Not sure why..yet.
+
 Sun May 25 00:35:12 2008  fox
 
       20* drivers/dtrace.c: Update to latest opensolaris code to help
