--- a/Changes
+++ b/Changes
@@ -1,3 +1,7 @@
+Sat Jun 14 00:20:36 2008  fox
+
+      30* dtrace.c: Fix kernel panic when creating an ecb event.
+
 Mon Jun  9 22:05:12 2008  fox
 
       29* Archive: 1.0024
