--- a/Changes
+++ b/Changes
@@ -1,3 +1,7 @@
+Mon Jun 23 23:13:08 2008  fox
+
+      39* divmod64.c: Fix the 64-bit divide issue.
+
 Wed Jun 18 23:19:11 2008  fox
 
       38* Archive: 1.0027
