--- a/Changes
+++ b/Changes
@@ -1,3 +1,19 @@
+Sun Jun 29 11:50:58 2008  fox
+
+      44* Archive: 1.0030
+
+      43* dtrace_linux.c: syscall tracing finally working on 32-bit kernel.
+
+      42* Archive: 1.0029
+
+      41* liblinux/proc2.c: Fix gethrtime and pthread_cond_reltimedwait_np()
+          to avoid dtrace eating lots of cpu and filling /var/log/messages.
+
+Thu Jun 26 22:51:51 2008  fox
+
+      40* i386 kernel sys_call_table patching now works, just need to get the
+          syscall collector to work.
+
 Mon Jun 23 23:13:08 2008  fox
 
       39* divmod64.c: Fix the 64-bit divide issue.
