--- a/Changes
+++ b/Changes
@@ -1,3 +1,12 @@
+Sun Oct 12 09:47:14 2008  fox
+
+      85* drti.c: Allow us to specify $DTRACE_DRTI_O so we can find
+          the drti.o object file;
+
+	  linux_types.h: Fix include issues for dlfcn.h.
+
+	  dtrace_linux.c: Now invoke the dtrace_ioctl_helper function.
+
 Sat Oct 11 10:00:48 2008  fox
 
       84* drivers/dtrace.c, dtrace_linux.c: Start to enable the 
