/home/fox/release/dtrace/2008/dtrace-20081020.tar.bz2

--- a/usdt/README
+++ b/usdt/README
@@ -1,7 +1,11 @@
-Simple USDT example, so we can start testing out USDT.
+Simple USDT examples, so we can start testing out USDT.
 
 Thanks to:
 
-http://blogs.sun.com/barts/entry/putting_user_defined_dtrace_probe
+	http://blogs.sun.com/barts/entry/putting_user_defined_dtrace_probe
 
 which helped me get my head around this...
+
+And Adam Leventhal for some other links:
+
+	http://blogs.sun.com/ahl/entry/user_land_tracing_gets_better
