--- a/Changes
+++ b/Changes
@@ -1,3 +1,7 @@
+Sat Dec 20 22:34:13 2008  fox
+
+     105* makefile, tools/build.pl: Handle i686 (32-bit) platform.
+
 Sat Dec 13 08:45:52 2008  fox
 
      104* systrace.c: Avoid panicing 2.6.27.8 kernel due to bad
