--- a/Changes
+++ b/Changes
@@ -1,3 +1,13 @@
+Tue Dec 23 00:04:02 2008  fox
+
+     107* systrace.c: Partial changes to handle we lost change_page_attr/
+          global_flush_tlb for 32-bit/2.6.27.10.
+
+Mon Dec 22 23:41:43 2008  fox
+
+     106* systrace.c: Handle kernel 2.6.27.10 - we lost the NSYSCALL
+          definition for 32-bit code.
+
 Sat Dec 20 22:34:13 2008  fox
 
      105* makefile, tools/build.pl: Handle i686 (32-bit) platform.
