--- a/Changes
+++ b/Changes
@@ -1,12 +1,7 @@
-Tue Dec 23 00:04:02 2008  fox
+Sat Dec 27 04:35:47 2008  fox
 
-     107* systrace.c: Partial changes to handle we lost change_page_attr/
-          global_flush_tlb for 32-bit/2.6.27.10.
-
-Mon Dec 22 23:41:43 2008  fox
-
-     106* systrace.c: Handle kernel 2.6.27.10 - we lost the NSYSCALL
-          definition for 32-bit code.
+     106* liblinux/getopt.c: Add this because some getopt()s are doing
+          weird stuff compared to GNU getopt.
 
 Sat Dec 20 22:34:13 2008  fox
 
