--- a/Changes
+++ b/Changes
@@ -1,3 +1,8 @@
+Sun Jan 18 18:51:13 2009  fox
+
+     115* dtrace_linux.c: Put in a trap handler for INT3 and pass onto
+          to dtrace. Not there yet....
+
 Thu Jan 15 20:56:19 2009  fox
 
      114* Archive: 1.0050
