/home/fox/release/dtrace/2009/dtrace-20090129.tar.bz2

--- a/Changes
+++ b/Changes
@@ -1,3 +1,7 @@
+Tue Jan 27 23:22:35 2009  fox
+
+     117* Archive: 1.0051
+
 Mon Jan 26 22:42:20 2009  fox
 
      116* dtrace_linux.c: Fix uwrite() interface.
