--- a/Changes
+++ b/Changes
@@ -1,3 +1,13 @@
+Tue Feb  3 13:03:37 2009  fox
+
+     129* Archive: 1.0054
+
+     128* systrace.c: Re-engineered to the syscall table patcher --
+          now works inside vmware and a real 32bit cpu.
+
+	  Kernel can still panic if you do some syscall tracing
+	  and try and do copyinstr(arg0) - need to find out why.
+
 Mon Feb  2 17:27:39 2009  fox
 
      127* ctl.c: Disable the hunt_init/hunt_cleanup code for the moment
