--- a/Changes
+++ b/Changes
@@ -1,3 +1,8 @@
+Wed Feb  4 21:17:32 2009  fox
+
+     130* Various: changes to better manage multikernels. Compiled
+          against 2.6.9, 2.6.24, 2.6.26, 2.6.28
+
 Tue Feb  3 13:03:37 2009  fox
 
      129* Archive: 1.0054
