--- a/Changes
+++ b/Changes
@@ -1,3 +1,9 @@
+Wed Feb 18 21:58:50 2009  fox
+
+     145* dt_link.c: Fix properly for 32 + 64 bit architectures.
+          Same reason as below. Also create a temp file to contain
+	  the intermediate linker object rather than rely on /dev/fd/NNN.
+
 Tue Feb 17 22:07:40 2009  fox
 
      144* dt_link.c: When writing the USDT output object file, use
