--- a/Changes
+++ b/Changes
@@ -1,3 +1,8 @@
+Fri Mar  6 14:09:04 2009  fox
+
+     180* cpu_32bit.c: Fix "MOV %ESP,%EAX" emulation which was
+          causing kernel to die when we trace local_bh_disable.
+
 Thu Mar  5 23:31:02 2009  fox
 
      179* cpu_32bit.c: Fix "TEST %EAX,%EAX" emulation.
